<resources>
    <string name="app_name">Hitung Biaya Warnet</string>
    <string name="warnetIntro">Hitung Biaya Warnet</string>
    <string name="jam">Mau Main Berapa Jam?</string>
    <string name="hitung">Hitung</string>
    <string name="jam_invalid">Jam Tidak Boleh Kosong</string>
    <string name="bayar">Total Yang harus Anda Bayarkan Adalah : Rp.</string>
    <string-array name="planets_array">
        <item>Regular</item>
        <item>VIP</item>
        <item>VVIP</item>
    </string-array>
    <string name="harga_x">Total Yang Harus Dibayarkan : Rp. %1$d</string>
    <string name="user">Username :</string>
    <string name="pass">Password :</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Hitung Biaya Warnet merupakan sebuah aplikasi Android untuk
menghitung harga yang harus dibayarkan ketika membooking pc di warnet dan mengetahui
Username dan password yang akan digunakan saat memakai pc tersebut.\n\nAplikasi ini dibuat untuk kelas
Mobpro 1. Temukan kodenya di https://github.com/Alfianakml/hitung_biaya_warnet\n\nCopyright © 2023 Alfian Akmal.\nAll rights reserved.</string>
    <string name="bagikan">Bagikan</string>
    <string name="bagikan_template">%1s\n%2s\n%3$s</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="histori">Histori</string>
    <string name="jam_x">JAM : %1$s</string>
    <string name="tipe_x">TIPE : %1$s</string>
    <string name="konfirmasi_hapus">Hapus histori?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="game">List Game</string>
    <string name="switch_layout">Ubah tampilan</string>
    <string name="user_x">Username : %1$s</string>
    <string name="pass_x">Password : %1$s</string>
    <string name="koneksi_error">Koneksi Error</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data game otomatis</string>
    <string name="notif_title">New Game Release!!!</string>
    <string name="notif_text">Cek Gamenya dan mainkan Sekarang Jugaa...</string>

</resources>